--- a/src/SRDocuments/web.config
+++ b/src/SRDocuments/web.config
@@ -6,6 +6,7 @@
   -->
 
   <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified"/>
     </handlers>
